Start tightening up validation

--- a/app/views/benefits-kind.html
+++ b/app/views/benefits-kind.html
@@ -19,7 +19,6 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-
         <h1 class="govuk-heading-xl">
           Benefits in kind
         </h1>
@@ -36,7 +35,7 @@
                 <h4 class="govuk-heading">Do you get benefits from work that are not money?</h4>
               </legend>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes">
+                <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
                 Yes
               </label>
