--- a/app/views/mandatory-evidence.html
+++ b/app/views/mandatory-evidence.html
@@ -28,7 +28,7 @@
         <form class="form" action="/end" method="post">
 
           <div class="govuk-c-checkboxes__item">
-            <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox">
+            <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
             <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I confirm that you have read and fully understood the above by ticking this box</label>
           </div>
           </br>
