--- a/app/views/valuables.html
+++ b/app/views/valuables.html
@@ -30,13 +30,13 @@
         <form class="form" action="/means-result" method="post">
 
           <div class="govuk-c-radios">
-            <fieldset class="govuk-c-fieldset">
+            <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
               <legend class="govuk-c-fieldset__legend">
                 <h4 class="govuk-heading">Do you have any valuable possessions (valued greater or equal to £500) e.g. jewellery, antiques, paintings, collectable items, horses or boats?</h4>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="valuables-1" name="valuables" type="radio" value="yes">
-                <label class="govuk-c-label govuk-c-radios__label" for="valuables-2">
+                <label class="govuk-c-label govuk-c-radios__label" for="valuables-1">
                 Yes
               </label>
               </div>
