--- a/app/views/capital-assets.html
+++ b/app/views/capital-assets.html
@@ -35,7 +35,7 @@
                 <h4 class="govuk-heading">Do you have any other bank, savings accounts or access to funds?</h4>
               </legend>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="cap-assets-1" name="cap-assets" type="radio" value="yes">
+                <input class="govuk-c-radios__input" id="cap-assets-1" name="cap-assets" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="cap-assets-2">
                 Yes
               </label>
