--- a/app/views/empstatus.html
+++ b/app/views/empstatus.html
@@ -22,8 +22,8 @@
         <h2 class="govuk-heading-xl">
           What are the details of your employment status?
         </h2>
+        <form class="form" action="/identify-evidence" method="get">
 
-        <form class="form" action="./questiontwotest" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
@@ -32,46 +32,40 @@
                 <span class="govuk-c-fieldset__hint">This includes part time or self employment</span>
               </legend>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="changed-name-1" name="changedName" type="radio" value="yes">
-                <label class="govuk-c-label govuk-c-radios__label" for="changed-name-1">
+                <input class="govuk-c-radios__input" id="employed-1" name="employed" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="employed-1">
                   Yes
                 </label>
               </div>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="changed-name-2" name="changedName" type="radio" value="no" checked>
-                <label class="govuk-c-label govuk-c-radios__label" for="changed-name-2">
+                <input class="govuk-c-radios__input" id="employed-2" name="employed" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="employed-2">
                   No
                 </label>
               </div>
             </fieldset>
           </div>
 
-        </form>
-
-        <form class="form" action="./questiontwotest" method="get">
-
           <div class="govuk-c-radios">
-            <legend class="govuk-c-fieldset__legend">
-              <h1 class="govuk-heading-m">Do you recieve any benefits from the state?</h1>
-              <span class="govuk-c-fieldset__hint">This includes Universal credit, housing benefit and disability benefits</span>
-            </legend>
-            <div class="govuk-c-radios__item">
-              <input class="govuk-c-radios__input" id="changed-name-1" name="changedName" type="radio" value="yes">
-              <label class="govuk-c-label govuk-c-radios__label" for="changed-name-1">
+            <fieldset class="govuk-c-fieldset">
+              <legend class="govuk-c-fieldset__legend">
+                <h1 class="govuk-heading-m">Do you recieve any benefits from the state?</h1>
+                <span class="govuk-c-fieldset__hint">This includes Universal credit, housing benefit and disability benefits</span>
+              </legend>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="benefits-1" name="benefits" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="benefits-1">
                   Yes
                 </label>
-            </div>
-            <div class="govuk-c-radios__item">
-              <input class="govuk-c-radios__input" id="changed-name-2" name="changedName" type="radio" value="no" checked>
-              <label class="govuk-c-label govuk-c-radios__label" for="changed-name-2">
+              </div>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="benefits-2" name="benefits" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="benefits-2">
                   No
                 </label>
-            </div>
+              </div>
+            </fieldset>
           </div>
-
-        </form>
-        </br>
-        <form class="form" action="/identify-evidence" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
@@ -80,14 +74,14 @@
                 <span class="govuk-c-fieldset__hint">This includes payments for jobs that you are currently serving notice for</span>
               </legend>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="changed-name-1" name="changedName" type="radio" value="yes">
-                <label class="govuk-c-label govuk-c-radios__label" for="changed-name-1">
+                <input class="govuk-c-radios__input" id="redundancy-1" name="redundancy" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="redundancy-1">
                   Yes
                 </label>
               </div>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="changed-name-2" name="changedName" type="radio" value="no" checked>
-                <label class="govuk-c-label govuk-c-radios__label" for="changed-name-2">
+                <input class="govuk-c-radios__input" id="redundancy-2" name="redundancy" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="redundancy-2">
                   No
                 </label>
               </div>
@@ -95,7 +89,6 @@
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">
         </form>
-
       </div>
     </div>
   </main>
