add evidence check to flow, fix navigation

--- a/app/views/identify-evidence.html
+++ b/app/views/identify-evidence.html
@@ -16,7 +16,6 @@
 
   <a class="govuk-c-back-link" href="/empstatus">Back</a>
 
-
   <main role="main" class="govuk-o-main-wrapper">
 
     <div class="govuk-o-grid">
@@ -26,8 +25,7 @@
           Identify your incoming and outgoing evidence for submission
         </h1>
 
-        <form class="form" action="/benefits-kind" method="post">
-
+        <form class="form" action="/check-evidence" method="post">
 
           <div>
             <table class="govuk-c-table" style="table-layout:fixed;">
