--- a/app/views/benefits-kind.html
+++ b/app/views/benefits-kind.html
@@ -12,7 +12,7 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/identify-evidence">Back</a>
+  <a class="govuk-c-back-link" href="/check-evidence">Back</a>
 
   <main role="main" class="govuk-o-main-wrapper">
 
