--- a/app/views/check-evidence.html
+++ b/app/views/check-evidence.html
@@ -12,11 +12,12 @@
     </p>
   </div>
 
+  <a class="govuk-c-back-link" href="/identify-evidence">Back</a>
+
   <main role="main" class="govuk-o-main-wrapper">
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
-
 
         <h1 class="govuk-heading-xl">
           Check your answers before submission
@@ -31,13 +32,13 @@
               <caption class="govuk-c-table__caption">Your income</caption>
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="col">Date</th>
-                  <th class="govuk-c-table__header" scope="col">Type</th>
+                  <th class="govuk-c-table__header" scope="col" width="500">Type</th>
+                  <th class="govuk-c-table__header" scope="col">Amount</th>
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Mortgage</th>
+                  <th class="govuk-c-table__header" scope="row">Amount</th>
                   <td class="govuk-c-table__cell ">£1200.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
@@ -57,7 +58,7 @@
               <caption class="govuk-c-table__caption">Your outgoings</caption>
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="col">Type</th>
+                  <th class="govuk-c-table__header" scope="col" scope="col" width="500">Type</th>
                   <th class="govuk-c-table__header" scope="col">Amount</th>
                 </tr>
               </thead>
@@ -78,11 +79,10 @@
             </table>
           </div>
 
-
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h4 class="govuk-heading">Do you have other income and outgoings that is not paid into your bank, but you have evidence for?</h4>
+                <h4 class="govuk-heading">Do you have other income and outgoings that are not paid into your bank, but you have evidence for?</h4>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="non-bank-money-1" name="non-bank-money" type="radio" value="yes">
@@ -103,6 +103,8 @@
             <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox">
             <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I confirm that everything I input is truthful and that I have not omitted anything.</label>
           </div>
+
+          </br>
 
           <input class="govuk-c-button" type="submit" value="Continue">
 
