--- a/app/views/obconsent.html
+++ b/app/views/obconsent.html
@@ -1,10 +1,4 @@
-{% extends "layout.html" %}
-
-{% block page_title %}
-  Question page
-{% endblock %}
-
-{% block content %}
+{% extends "layout.html" %} {% block page_title %} Question page {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,10 +6,10 @@
     <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
       alpha
     </strong>
-    <span class="govuk-c-phase-banner__text">
+      <span class="govuk-c-phase-banner__text">
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
     </span>
-  </p>
+    </p>
   </div>
 
   <a class="govuk-c-back-link" href="/obexpress">Back</a>
@@ -30,20 +24,80 @@
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Do you consent to automated evidence collection from the following sources?</h1>
+                <h1 class="govuk-heading-xl">Consent to the following requests for information</h1>
                 <span class="govuk-c-fieldset__hint">If you consent, please tick the checkboxes</span>
               </legend>
+
+              <p class="govuk-body">Blurb about safety, ease and the different sources to consent to:</p>
+
+              <div class="govuk-heading-m">Open banking</div>
+              <p class="govuk-body">What open banking is really briefly, why it’s safe and how this is better than sourcing manual evidence.</p>
+
+
               <div class="govuk-c-checkboxes__item">
-                <input class="govuk-c-checkboxes__input" id="nationality-1" name="nationality" type="checkbox" value="british">
-                <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-1">
-                  Open Banking
+                <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
+
+                <label class="govuk-c-label govuk-c-checkboxes__label" for="open-banking">
+                  The Legal Aid Agency can access the following account information from my accounts held at my bank/building society.
                 </label>
+
+                <details>
+                  <summary><span class="summary">Your account details</span></summary>
+                  <div class="panel panel-border-narrow">
+                    <p class="govuk-body">
+                      Some text about account details.
+                    </p>
+                    <p class="govuk-body">
+                      Some more text about account details.
+                    </p>
+                  </div>
+                </details>
+                <details>
+                  <summary><span class="summary">Your transactions for the past 3 months</span></summary>
+                  <div class="panel panel-border-narrow">
+                    <p class="govuk-body">
+                      Some text about transactions.
+                    </p>
+                    <p class="govuk-body">
+                      Some more text about transactions.
+                    </p>
+                  </div>
+                </details>
               </div>
+
+              </br>
+              <div class="govuk-heading-m">Other government services</div>
+              <p class="govuk-body">Some text here.</p>
+
               <div class="govuk-c-checkboxes__item">
-                <input class="govuk-c-checkboxes__input" id="nationality-2" name="nationality" type="checkbox" value="irish">
-                <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-2">
-                  Other goverment departments
+                <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
+                <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
+                  The Legal Aid Agency can access the following information from other government departments
                 </label>
+
+                <details>
+                  <summary><span class="summary">HMRC: Reported income and tax</span></summary>
+                  <div class="panel panel-border-narrow">
+                    <p class="govuk-body">
+                      Some text about HMRC.
+                    </p>
+                    <p class="govuk-body">
+                      Some more text about HMRC.
+                    </p>
+                  </div>
+                </details>
+                <details>
+                  <summary><span class="summary">DWP: In receipt of passported benefits</span></summary>
+                  <div class="panel panel-border-narrow">
+                    <p class="govuk-body">
+                      Some text about DWP.
+                    </p>
+                    <p class="govuk-body">
+                      Some more text about DWP.
+                    </p>
+                  </div>
+                </details>
+
               </div>
             </fieldset>
           </div>
