Refactor of multiple screens following discussion with Ross - content, layout, validation

--- a/app/views/check-evidence.html
+++ b/app/views/check-evidence.html
@@ -85,7 +85,7 @@
                 <h4 class="govuk-heading">Do you have other income and outgoings that are not paid into your bank, but you have evidence for?</h4>
               </legend>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="non-bank-money-1" name="non-bank-money" type="radio" value="yes">
+                <input class="govuk-c-radios__input" id="non-bank-money-1" name="non-bank-money" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="non-bank-money-1">
                 Yes
               </label>
@@ -100,7 +100,7 @@
           </div>
 
           <div class="govuk-c-checkboxes__item">
-            <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox">
+            <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
             <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I confirm that everything I input is truthful and that I have not omitted anything.</label>
           </div>
 
