--- a/app/views/dwpconf.html
+++ b/app/views/dwpconf.html
@@ -84,7 +84,7 @@
         </p>
 
         <div class="form-group">
-          <a href="/eviconf" class="govuk-c-button">Accept and confirm details</a>
+          <a href="/eviconf" class="govuk-c-button">Continue</a>
         </div>
 
       </div>
