--- a/app/views/eviconf.html
+++ b/app/views/eviconf.html
@@ -23,7 +23,7 @@
             We automatically capture your means evidence
           </h1>
 
-          <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">means assessment</a></p>
+          <p class="govuk-body">Evidence we collect for <b>means assessment</b></p>
 
           <ul class="govuk-list govuk-list--bullet">
             <li>Employed income</li>
@@ -35,7 +35,10 @@
             <li>Housing costs</li>
           </ul>
 
-          <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">capital assessment</a></p>
+          <hr>
+          </br>
+
+          <p class="govuk-body">Evidence we collect for <b>capital assessment</b></p>
 
           <ul class="govuk-list govuk-list--bullet">
             <li>Bank savings account</li>
@@ -44,7 +47,7 @@
             <li>ISAs</li>
           </ul>
 
-          <p class="govuk-body">We may need help with other types of evidence that we can't see from your bank statements or HMRC records.</p>
+          <p class="govuk-body"><b>We may need help with other types of evidence that we can't see from your bank statements or HMRC records.</b></p>
 
         </div>
 
