--- a/app/views/identify-evidence.html
+++ b/app/views/identify-evidence.html
@@ -45,7 +45,18 @@
                   <td class="govuk-c-table__cell">Nando’s Chicken</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£12.40</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" id="name1" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" id="name1" style="
+
+                    -webkit-box-sizing: border-box;
+                            box-sizing: border-box;
+                    top: 0;
+                    left: 0;
+                    width: em(40px, 19px);
+                    height: em(40px, 19px);
+                    border: $govuk-border-width-form-element solid $govuk-text-colour;
+                    background: transparent;
+
+                      cursor: pointer;" />&nbsp;</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
