--- a/app/views/obconsent.html
+++ b/app/views/obconsent.html
@@ -30,9 +30,10 @@
 
               <p class="govuk-body">Blurb about safety, ease and the different sources to consent to:</p>
 
-              <div class="govuk-heading-m">Open banking</div>
-              <p class="govuk-body">What open banking is really briefly, why it’s safe and how this is better than sourcing manual evidence.</p>
 
+              <div class="govuk-heading-m"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"> Open banking</div>
+
+              <p class="govuk-body">What open banking is really briefly, why it’s safe and how this is better than sourcing manual evidence.</p>
 
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
@@ -42,7 +43,7 @@
                 </label>
 
                 <details>
-                  <summary><span class="summary">Your account details</span></summary>
+                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary" style="text-decoration: underline; color: #0000EE;">Your account details</span></summary>
                   <div class="panel panel-border-narrow">
                     <p class="govuk-body">
                       Some text about account details.
@@ -53,7 +54,7 @@
                   </div>
                 </details>
                 <details>
-                  <summary><span class="summary">Your transactions for the past 3 months</span></summary>
+                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary" style="text-decoration: underline; color: #0000EE;">Your transactions for the past 3 months</span></summary>
                   <div class="panel panel-border-narrow">
                     <p class="govuk-body">
                       Some text about transactions.
@@ -64,9 +65,10 @@
                   </div>
                 </details>
               </div>
-
               </br>
-              <div class="govuk-heading-m">Other government services</div>
+              <hr>
+              </br>
+              <div class="govuk-heading-m"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"> Other government services</div>
               <p class="govuk-body">Some text here.</p>
 
               <div class="govuk-c-checkboxes__item">
@@ -76,7 +78,7 @@
                 </label>
 
                 <details>
-                  <summary><span class="summary">HMRC: Reported income and tax</span></summary>
+                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary">HMRC: Reported income and tax</span></summary>
                   <div class="panel panel-border-narrow">
                     <p class="govuk-body">
                       Some text about HMRC.
@@ -87,7 +89,7 @@
                   </div>
                 </details>
                 <details>
-                  <summary><span class="summary">DWP: In receipt of passported benefits</span></summary>
+                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary">DWP: In receipt of passported benefits</span></summary>
                   <div class="panel panel-border-narrow">
                     <p class="govuk-body">
                       Some text about DWP.
@@ -102,7 +104,7 @@
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Accept and Continue">
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
 
