--- a/app/views/mandatory-evidence.html
+++ b/app/views/mandatory-evidence.html
@@ -23,20 +23,15 @@
           Mandatory evidence
         </h1>
 
-        <p class="govuk-body">The next screen will list the evidence that you will be required to submit based on the informtion you have already provided.</p>
+        <p class="govuk-body">The next screen will list the evidence that will be required by the LAA based on the answers you have provided to the questions asked in the means interview. This evidence is mandatory to enable submission of this application. Please check off
+          each required item.</p>
+        <p class="govuk-body">You will note that on completion of the means interview that the Document Upload link will be available to you. You may either upload all requested items for sending with this application or alternatively you may wait and send these items following
+          the receipt of a Document/Evidence Request task that you will receive following submission.</p>
 
-        <form class="form" action="/end" method="post">
-
-          <div class="govuk-c-checkboxes__item">
-            <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
-            <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I confirm that you have read and fully understood the above by ticking this box</label>
-          </div>
-          </br>
-
-          <input class="govuk-c-button" type="submit" value="Continue">
-
-        </form>
-
+        <div class="govuk-c-checkboxes__item">
+          <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
+          <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">Please confirm that you have read and understood the above by ticking this box</label>
+        </div>
       </div>
     </div>
   </main>
