--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -33,81 +33,232 @@
           Provisional result: In scope
         </h2></br>
 
+        <h3 class="govuk-heading">
+          Breakdown of provisional result
+        </h2></br>
+
         <form class="form" action="/mandatory-evidence" method="post">
 
           <div>
-            <table class="govuk-c-table--two-thirds">
+            <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="col">Breakdown of result</th>
-                  <th class="govuk-c-table__header" scope="col"></th>
+                  <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Capital</th>
+                  <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" width="150" style="border-width:thick;">&nbsp;</th>
+                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">&nbsp;</th>
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Main dwelling</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Main dwelling</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£5,999.00</td>
+                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Additional property</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Additional property</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Land</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Land</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Timeshare</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Timeshare</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Bank accounts</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Bank accounts</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Main dwelling</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Third-party bank accounts</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Third-party bank accounts</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Investments</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£3,276.85</td>
+                  <td class="govuk-c-table__cell"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Investments</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Other savings</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£47.50</td>
+                  <td class="govuk-c-table__cell"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Other savings</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Shares</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Shares</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Policies</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Policies</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Wills</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Valuables</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Valuable possessions</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
+                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Motor vehicles</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Motor vehicles</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Money due</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Money due</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Other capital</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell">Other capital</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Trusts</th>
-                  <td class="govuk-c-table__cell">£0.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;">Trusts</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£10,323.35</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Total capital limit</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£8,000.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+            </table>
+          </div>
+          </br>
+
+          <div>
+            <table class="govuk-c-table--two-thirds" style="border-spacing:0">
+
+              <thead class="govuk-c-table__head">
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Gross income</th>
+                  <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" width="150" style="border-width:thick;">&nbsp;</th>
+                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">&nbsp;</th>
+                </tr>
+              </thead>
+              <tbody class="govuk-c-table__body">
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Total gross wage</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£20,100.00</td>
+                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Total benefits</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Maintenance</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£7,000.00</td>
+                  <td class="govuk-c-table__cell"><a href="">Verified</a></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Financial support</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£3,000.00</td>
+                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Total other income</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell" style="border-width:thick;">Redundancy income</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£30,100.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Gross income limit</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,657.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+            </table>
+          </div>
+          </br>
+
+          <div>
+            <table class="govuk-c-table--two-thirds" style="border-spacing:0">
+
+              <thead class="govuk-c-table__head">
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Disposable income</th>
+                  <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" width="150" style="border-width:thick;">&nbsp;</th>
+                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">&nbsp;</th>
+                </tr>
+              </thead>
+              <tbody class="govuk-c-table__body">
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">PAYE + NI</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£4,020.00</td>
+                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Employment expenses</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Child care</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£9,800.00</td>
+                  <td class="govuk-c-table__cell"><a href="">Verified</a></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Dependants allowance</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Maintenance out</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Housing costs</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell" style="border-width:thick;">Criminal legal aid</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Total deductions</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£13,820.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Total disposable income</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2460.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Disposable income limit</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
             </table>
           </div>
