--- a/app/views/valuables.html
+++ b/app/views/valuables.html
@@ -35,7 +35,7 @@
                 <h4 class="govuk-heading">Do you have any valuable possessions (valued greater or equal to £500) e.g. jewellery, antiques, paintings, collectable items, horses or boats?</h4>
               </legend>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="valuables-1" name="valuables" type="radio" value="yes">
+                <input class="govuk-c-radios__input" id="valuables-1" name="valuables" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="valuables-1">
                 Yes
               </label>
