minor cosmetic changes

--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -53,7 +53,7 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Main dwelling</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£5,999.00</td>
-                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Additional property</td>
@@ -102,8 +102,8 @@
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Wills</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£14,212.10</td>
+                  <td class="govuk-c-table__cell"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Valuable possessions</td>
@@ -132,7 +132,7 @@
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£10,323.35</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£24,534.45</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
