minor change - align statuses right

--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -53,77 +53,77 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Main dwelling</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£5,999.00</td>
-                  <td class="govuk-c-table__cell"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Additional property</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Land</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Timeshare</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Third-party bank accounts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Investments</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£3,276.85</td>
-                  <td class="govuk-c-table__cell"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other savings</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£47.50</td>
-                  <td class="govuk-c-table__cell"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell" style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Shares</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Policies</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Wills</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£14,212.10</td>
-                  <td class="govuk-c-table__cell"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Valuable possessions</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
-                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Motor vehicles</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Money due</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other capital</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Trusts</td>
@@ -158,27 +158,27 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£20,100.00</td>
-                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total benefits</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£7,000.00</td>
-                  <td class="govuk-c-table__cell"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Financial support</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£3,000.00</td>
-                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total other income</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Redundancy income</td>
@@ -213,32 +213,32 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">PAYE + NI</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£4,020.00</td>
-                  <td class="govuk-c-table__cell"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Employment expenses</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Child care</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£9,800.00</td>
-                  <td class="govuk-c-table__cell"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Dependants allowance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance out</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Housing costs</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Criminal legal aid</td>
