--- a/app/views/identify-evidence.html
+++ b/app/views/identify-evidence.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Question page {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} QEvidence submission prototype  {% endblock %} {% block content %}
 
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
 
