--- a/app/views/obconsent.html
+++ b/app/views/obconsent.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Question page {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype  {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
